fix: cargo.toml-> homepage url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 license = "MIT"
 description = "A basic template for GTK-RS, NIX"
 keywords = ["rust", "gtk", "nix", "flake", "template"]
-repository = "github.com/domirando/gtkchi"
+repository = "https://github.com/domirando/gtkchi"
 homepage = "https://github.com/domirando/gtkchi"
 readme = "README.md"
 exclude = [
