--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ include = [
 ]
 
 [dependencies]
-relm4 = "0.9.1"
+relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
 relm4-components = "0.9.1"
