--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ include = [
 [dependencies]
 relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
 relm4-components = "0.9.1"
+rust-analyzer = "0.0.1"
